<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/tile_background"
	android:padding="10dp"
	android:layout_alignParentTop="true">
	<EditText 
	    android:id="@+id/add_measurement_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:hint="@string/add_measurement_name_hint"
	    android:layout_alignParentTop="true"
	    android:background="@drawable/input_background"
	    android:padding="10dp"
	    android:singleLine="true"
	    android:lines="1"
	    android:scrollHorizontally="true"/>
	<EditText
	    android:id="@+id/add_measurement_quantity"
	    android:hint="@string/add_measurement_quantity_hint"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:lines="1"
	    android:background="@drawable/input_background"
	    android:padding="10dp"
	    android:scrollHorizontally="true"
	    android:layout_marginTop="10dp"
	    android:inputType="numberDecimal"
	    android:layout_below="@id/add_measurement_name" />
	<EditText
	    android:id="@+id/add_measurement_units"
	    android:hint="@string/add_measurement_units_hint"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:background="@drawable/input_background"
	    android:padding="10dp"
	    android:lines="1"
	    android:scrollHorizontally="true"
	    android:layout_marginTop="10dp"
	    android:layout_below="@id/add_measurement_quantity" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    android:layout_below="@id/add_measurement_units">
	    <Button
		android:id="@+id/add_measurement_add"
		android:text="@string/add_measurement_add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_marginRight="5dp"
		android:background="@drawable/button_background" />
	    <Button android:id="@+id/add_measurement_cancel"
		android:text="@string/add_measurement_cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_weight="1"
		android:background="@drawable/button_background" />
	</LinearLayout>
</RelativeLayout>